===Changelog for NEI LOTR===
Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'

 #1.0.0-BETA:
 + Updated to v36.3 of the LOTR Mod
  + Added support for the Bree crafting table and traders
  * Moved some "Show all recipes" buttons, so they don't interfere with the pouch button
+ The LOTR coin coint indicator is now displayed on the left side instead of the right

 #2.1.0-ALPHA:
 + Updated to neiRecipeHandlers-1.1.0-BETA
  + The various recipe handlers are now always shown in the same order - the order can be configured by the user
 + Updated to v35.4 of the LOTR Mod
 + Added compatibility for mtLotr-1.0.0-BETA
 
 * The various modifier scrolls are now actually seen as different items by NEI

 #2.0.0-ALPHA:
 + Updated to NEIRecipeHandlers-1.0.0-BETA
 + Updated to v35.3 of the LOTR Mod
  + Added a trader recipe handler for the Wicked  Dwarf
  + Added the new technical blocks to the item hiding list
 + Added a button which shows all recipes of a handler to the handler and device GUIs ("transfer rect")
 + Added support for the treasure pile to ingot recipes
 
 * Fixed wrong recipes with the cauldron recipe handler and Hobbit Pipes with magic smoke
 * Slightly improved the performance of the addon

 #1.0.0-ALPHA:
  + Defined a public API
  + Updated to NEIRecipeHandlers-2.0.2-ALPHA
  + Updated to v34.3 of the LOTR Mod
 
  * Fixed that the trader recipe handler for the "Umbar Stonemason" was registered twice
  * Fixed that the LOTR coin count indicator was rendered for recipe handlers

 #0.7.0-ALPHA:
  + Updated to v34 of the LOTR Mod
   + Added support for the Gulf of Harad and Umbar Crafting Tables
   + Added the new technical blocks to the item hiding list
   + Added support for all new traders

 #0.6.0-ALPHA:
  + Updated to NEIRecipeHandlers-2.0.1-ALPHA

 #0.5.3-ALPHA:
  + The sourcecode of the plugin now available at: https://github.com/CraftedMods/nei-lotr
  + Added a cauldron recipe handler which supports undyening and unpoisoning recipes